# Capstone-Project_1_Regulatory_Compliance_System

./: README.md  main.py  pyproject.toml  streamlit_app.py
src/api/v1/agents/: rag_agent.py
src/api/v1/routes/: query.py  upload.py
src/api/v1/schemas/: query_schema.py
src/api/v1/services/: query_service.py
src/api/v1/tools/: fts_search_tool.py  hybrid_search_tool.py  vector_search_tool.py
src/core/: db.py
src/ingestion/: ingestion.py
