[project]
name = "capstone-project-1-regulatory-compliance-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-postgres>=0.0.17",
    "pypdf>=6.9.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]
